# bentoml_prometheus

./: README.md  bentofile.yaml  locustfile.py  pyproject.toml  service.py  train.py
monitoring/: docker-compose.yml
monitoring/prometheus/: prometheus.yml
